--- a/html/BlindTest/JoinPrivateRoom.html
+++ b/html/BlindTest/JoinPrivateRoom.html
@@ -7,22 +7,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/blindTest.css">
+    <link rel="stylesheet" href="/static/css/JoinPrivateRoom.css">
     <title>Groupie Tracker - Blind Test</title>
 </head>
 
 <body>
     <h1 class="title-top">Blind Test</h1>
-    
-    <form id="JoinRoom" action="/JoinBlindtestHandler" method="post">
-        <input type="number" name="roomID" placeholder="Identifiant du serveur" required>
-        <button type="submit">Valider</button>
-    </form>
+    <p class="title-top-2"> Assurer vous de mettre le code fournir par le createur de la partie(l'hôte)</p>
+    <div class="container">
+        <form id="JoinRoom" action="/JoinBlindtestHandler" method="post">
+            <input class="myInput" type="number" name="roomID" placeholder="Identifiant du serveur" required>
+            <button class="myBtn" type="submit">Valider</button>
+        </form>
+        <br>
+            {{if .ErrorMessage}}
+            <p style="color: red; text-align: center; margin-bottom: 20px;">{{.ErrorMessage}}</p>
+            {{end}}
 
-    {{if .ErrorMessage}}
-    <p style="color: red; text-align: center; margin-bottom: 10px;">{{.ErrorMessage}}</p>
-    {{end}}
-        
+    </div>
 </body>
 
 </html>
