--- a/html/BlindTest/Room.html
+++ b/html/BlindTest/Room.html
@@ -22,6 +22,7 @@
 
             {{if .PlayerNumber}}
             <p>Vous êtes actuellement {{.PlayerNumber}} dans le serveur.</p>
+            <p style="font-size: 12px; margin-top: -15px;">(Vous devez rafraîchir la page pour voir ce nombre évoluer)</p>
             {{end}}
 
             <div class="deco-Img">    
