--- a/html/PetitBac/JoinPrivateRoom.html
+++ b/html/PetitBac/JoinPrivateRoom.html
@@ -8,14 +8,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/JoinPrivateRoom.css">
-    <title>Groupie Tracker - Blind Test</title>
+    <title>Groupie Tracker - Petit bac</title>
 </head>
 
 <body>
-    <h1 class="title-top">Blind Test</h1>
+    <h1 class="title-top">Petit bac</h1>
     <p class="title-top-2"> Assurez vous de mettre l'identifiant fourni par le createur du serveur</p>
     <div class="container">
-        <form id="JoinRoom" action="/JoinBlindtestHandler" method="post">
+        <form id="JoinRoom" action="/JoinPetitBacHandler" method="post">
             <input class="myInput" type="number" name="roomID" placeholder="Identifiant du serveur" required>
             <button class="myBtn" type="submit">Valider</button>
         </form>
