--- a/html/PetitBac/Room.html
+++ b/html/PetitBac/Room.html
@@ -8,11 +8,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/blindTest.css">
-    <title>Groupie Tracker - Blind Test</title>
+    <title>Groupie Tracker - Petit Bac</title>
 </head>
 
 <body>
-    <h1 class="title-top">Blind Test</h1>
+    <h1 class="title-top">Petit Bac</h1>
 
     <div class="container-block">
         <div class="audioContainer">
