--- a/html/GuessTheSong/LandingPage.html
+++ b/html/GuessTheSong/LandingPage.html
@@ -20,8 +20,8 @@
             <div class="deco-Img">    
         </div>
         <div class="RoomsButtons">
-            <a href="/CreatePrivateGuessTheSong"><button class="RoomsButton">Créer un serveur privé</button></a>
-            <a href="/JoinPrivateGuessTheSong"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
+            <a href="/CreateGuessTheSong"><button class="RoomsButton">Créer un serveur privé</button></a>
+            <a href="/JoinGuessTheSong"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
             <a href="/GuessTheSong"><button class="RoomsButton">Rejoindre le serveur public</button></a>
         </div>
         <a href="/GuessTheSongRules"><button class="RulesButton">Règles</button></a>
