--- a/html/PetitBac/CreatePrivateRoom.html
+++ b/html/PetitBac/CreatePrivateRoom.html
@@ -8,22 +8,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/privateRoom.css">
-    <title>Groupie Tracker - Blind Test</title>
+    <title>Groupie Tracker - Petit bac</title>
 </head>
 
 <body>
 
-    <h1 class="title-top">Blind Test</h1>
+    <h1 class="title-top">Petit bac</h1>
     <p class="info"> Les données non remplies seront automatiquement attribués. </p>
 
     <div class="container">
-        <form id="CreateRoom" action="/CreateBlindtestHandler" method="post">
+        <form id="CreateRoom" action="/CreatePetitBacHandler" method="post">
             <input class="defRules" type="text" name="roomName" placeholder="Nom de votre serveur" required>
             <input class="defRules" type="number" name="maxPlayer" placeholder="Nombre de joueur maximum" required>
             <input class="defRules" type="number" name="gameTurns" placeholder="Nombre de tours">
-            <input class="defRules" type="number" name="musicDuration" placeholder="Durée des extraits">
+            <select class="defRules" name="categories[]" multiple required>
+                <option value="Album">Album</option>
+                <option value="MusicGroup">Groupe de musique</option>
+                <option value="Instrument">Instrument de musique</option>
+                <option value="Featuring">Featuring</option>
+            </select>          
             <input class="defRules" type="number" name="answerDuration"
-                placeholder="Temps de réponse après l'extrait">
+                placeholder="Temps de réponse">
             <button class="btnDef" type="submit">Valider</button>
         </form>
     </div>
