--- a/html/PetitBac/LandingPage.html
+++ b/html/PetitBac/LandingPage.html
@@ -19,8 +19,8 @@
             <div class="deco-Img">    
         </div>
         <div class="RoomsButtons">
-            <a href="/CreatePrivatePetitBac"><button class="RoomsButton">Créer un serveur privé</button></a>
-            <a href="/JoinPrivatePetitBac"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
+            <a href="/CreatePetitBac"><button class="RoomsButton">Créer un serveur privé</button></a>
+            <a href="/JoinPetitBac"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
             <a href="/PetitBac"><button class="RoomsButton">Rejoindre le serveur public</button></a>
         </div>
         <a href="/PetitBacRules"><button class="RulesButton">Règles</button></a>
