correct chat pseudo

--- a/html/GuessTheSong/LandingPage.html
+++ b/html/GuessTheSong/LandingPage.html
@@ -22,7 +22,7 @@
         <div class="RoomsButtons">
             <a href="/CreateGuessTheSong"><button class="RoomsButton">Créer un serveur privé</button></a>
             <a href="/JoinGuessTheSong"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
-            <a href="/GuessTheSong"><button class="RoomsButton">Rejoindre le serveur public</button></a>
+            <a href="/PublicGuessTheSong"><button class="RoomsButton">Rejoindre le serveur public</button></a>
         </div>
         <a href="/GuessTheSongRules"><button class="RulesButton">Règles</button></a>
     </div>
