--- a/html/PetitBac/LandingPage.html
+++ b/html/PetitBac/LandingPage.html
@@ -21,7 +21,7 @@
         <div class="RoomsButtons">
             <a href="/CreatePetitBac"><button class="RoomsButton">Créer un serveur privé</button></a>
             <a href="/JoinPetitBac"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
-            <a href="/PetitBac"><button class="RoomsButton">Rejoindre le serveur public</button></a>
+            <a href="/PublicPetitBac"><button class="RoomsButton">Rejoindre le serveur public</button></a>
         </div>
         <a href="/PetitBacRules"><button class="RulesButton">Règles</button></a>
     </div>
