--- a/html/PetitBac/Room.html
+++ b/html/PetitBac/Room.html
@@ -29,7 +29,7 @@
         </div>
       
         {{if .ButtonVisible}}
-        <form action="/BlindtestRoomHandler" method="post">
+        <form action="/PetitBacRoomHandler" method="post">
             <button  class="mybtn" type="submit" name="action" value="BlindTest">Démarrer le jeu</button>
         </form>
         {{else}}
