--- a/html/GuessTheSong/Rules.html
+++ b/html/GuessTheSong/Rules.html
@@ -14,7 +14,7 @@
                 Ce jeu vous montre un extrait des paroles d'une chanson, vous devez ensuite trouver le
                 titre de la musique originale.
                 Bon jeu❤😍
-            <form action="/GuessTheSong" method="post">
+            <form action="/PublicGuessTheSong" method="post">
                 <button class="MyBB" href="/" name="restart">Start</button>
             </form>
         </div>
