--- a/html/PetitBac/Rules.html
+++ b/html/PetitBac/Rules.html
@@ -13,7 +13,7 @@
         <div class="container">
                 Vous avez 30 secondes pour trouver un mot pour chaque catégorie. Attention, la première lettre est imposée !
                 Bon jeu❤😍
-            <form action="/PetitBac" method="post">
+            <form action="/PublicPetitBac" method="post">
                 <button class="MyBB" href="/" name="restart">Start</button>
             </form>
         </div>
