--- a/html/BlindTest/Rules.html
+++ b/html/BlindTest/Rules.html
@@ -13,7 +13,7 @@
         <div class="container">
                 Une musique se lance toutes les 15 secondes, à vous de trouver le titre de la musique à partir de l'extrait audio !
                 Bon jeu❤😍
-            <form action="/Blindtest" method="post">
+            <form action="/PublicBlindtest" method="post">
                 <button class="MyBB" href="/" name="restart">Start</button>
             </form>
         </div>
